--- a/Silksong.csproj
+++ b/Silksong.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A658D7A5-E9F4-4BE4-84EC-711FDA93F18C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Changeling</RootNamespace>
-    <AssemblyName>Changeling</AssemblyName>
+    <RootNamespace>Silksong</RootNamespace>
+    <AssemblyName>Silksong</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <VanillaFiles>..\Vanilla</VanillaFiles>
@@ -81,8 +81,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Changeling.cs" />
-    <Compile Include="ChangelingControl.cs" />
+    <Compile Include="Silksong.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
