add basic dialogue support

--- a/Silksong.csproj
+++ b/Silksong.csproj
@@ -87,6 +87,7 @@
   <ItemGroup>
     <Compile Include="Silksong.cs" />
     <Compile Include="Helpers.cs" />
+    <Compile Include="Dialogue.cs" />
     <Compile Include="Hornet\Animations.cs" />
     <Compile Include="Hornet\Sounds.cs" />
     <Compile Include="Hornet\Hornets.cs" />
