--- a/Silksong.csproj
+++ b/Silksong.csproj
@@ -1,118 +1,75 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A658D7A5-E9F4-4BE4-84EC-711FDA93F18C}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Silksong</RootNamespace>
-    <AssemblyName>Silksong</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <VanillaFiles>..\Vanilla</VanillaFiles>
-    <ModdingAPI>..\HollowKnight.Modding\OutputFinal</ModdingAPI>
-    <HollowKnightModsDirectory>..\linkedtoHKMods</HollowKnightModsDirectory>
-    <TargetFrameworkProfile />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+	<Import Project="LocalProperties.props"/>
+	<PropertyGroup>
+		<TargetFramework>net472</TargetFramework>
+		<LangVersion>latest</LangVersion>
+	</PropertyGroup>
 
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <CustomCommands>
-      <CustomCommands>
-        <Command>
-          <type>BeforeBuild</type>
-        </Command>
-      </CustomCommands>
-    </CustomCommands>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-    <ItemGroup>
-    <Reference Include="System.Core" />
-    <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(ModdingAPI)\Assembly-CSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(VanillaFiles)\UnityEngine.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(VanillaFiles)\UnityEngine.CoreModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.InputLegacyModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(VanillaFiles)\UnityEngine.InputLegacyModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.AudioModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(VanillaFiles)\UnityEngine.AudioModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(VanillaFiles)\UnityEngine.CoreModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.AudioModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(VanillaFiles)\UnityEngine.AudioModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.ImageConversionModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(VanillaFiles)\UnityEngine.ImageConversionModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UIModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(VanillaFiles)\UnityEngine.UIModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(VanillaFiles)\UnityEngine.UI.dll</HintPath>
-    </Reference>
+	<ItemGroup>
+		<Reference Include="Assembly-CSharp">
+			<HintPath>$(APIPath)\Assembly-CSharp.dll</HintPath>
+			<SpecificVersion>false</SpecificVersion>
+		</Reference>
+		<Reference Include="UnityEngine">
+			<HintPath>$(APIPath)\UnityEngine.dll</HintPath>
+			<SpecificVersion>false</SpecificVersion>
+		</Reference>
+		<Reference Include="UnityEngine.CoreModule">
+			<HintPath>$(APIPath)\UnityEngine.CoreModule.dll</HintPath>
+			<SpecificVersion>false</SpecificVersion>
+		</Reference>
+		<Reference Include="UnityEngine.InputLegacyModule">
+			<HintPath>$(APIPath)\UnityEngine.InputLegacyModule.dll</HintPath>
+			<SpecificVersion>false</SpecificVersion>
+		</Reference>
+		<Reference Include="UnityEngine.AudioModule">
+			<HintPath>$(APIPath)\UnityEngine.AudioModule.dll</HintPath>
+			<SpecificVersion>false</SpecificVersion>
+		</Reference>
+		<Reference Include="UnityEngine.CoreModule">
+			<HintPath>$(APIPath)\UnityEngine.CoreModule.dll</HintPath>
+			<SpecificVersion>false</SpecificVersion>
+		</Reference>
+		<Reference Include="UnityEngine.AudioModule">
+			<HintPath>$(APIPath)\UnityEngine.AudioModule.dll</HintPath>
+			<SpecificVersion>false</SpecificVersion>
+		</Reference>
+		<Reference Include="UnityEngine.ImageConversionModule">
+			<HintPath>$(APIPath)\UnityEngine.ImageConversionModule.dll</HintPath>
+			<SpecificVersion>false</SpecificVersion>
+		</Reference>
+		<Reference Include="UnityEngine.UIModule">
+			<HintPath>$(APIPath)\UnityEngine.UIModule.dll</HintPath>
+			<SpecificVersion>false</SpecificVersion>
+		</Reference>
+		<Reference Include="UnityEngine.UI">
+			<HintPath>$(APIPath)\UnityEngine.UI.dll</HintPath>
+			<SpecificVersion>false</SpecificVersion>
+		</Reference>
 
-    <Reference Include="UnityEngine.TextRenderingModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(VanillaFiles)\UnityEngine.TextRenderingModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Physics2DModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(VanillaFiles)\UnityEngine.Physics2DModule.dll</HintPath>
-    </Reference>
-    <Reference Include="PlayMaker, Version=1.6.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(VanillaFiles)\PlayMaker.dll</HintPath>
-    </Reference>
-    <Reference Include="Satchel">
-      <HintPath>$(HollowKnightModsDirectory)\Satchel\Satchel.dll</HintPath>
-    </Reference>
-    <Reference Include="MMHOOK_Assembly-CSharp, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(ModdingAPI)\MMHook_Assembly-Csharp.dll</HintPath>
-    </Reference>
-    <Reference Include="MMHOOK_PlayMaker, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(ModdingAPI)\MMHook_PlayMaker.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  
-  <ItemGroup>
-    <Compile Include="Silksong.cs" />
-    <Compile Include="Helpers.cs" />
-    <Compile Include="Dialogue.cs" />
-    <Compile Include="Hornet\Animations.cs" />
-    <Compile Include="Hornet\Sounds.cs" />
-    <Compile Include="Hornet\Hornets.cs" />
-    <Compile Include="Hornet\Controller.cs" />
-    <Compile Include="Options\Menu.cs" />
-    <Compile Include="Options\Settings.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-      <EmbeddedResource Include="Images\*.png" />
-  </ItemGroup>
-
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-      <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(HollowKnightModsDirectory)\$(AssemblyName)"/>
-  </Target>
+		<Reference Include="UnityEngine.TextRenderingModule">
+			<HintPath>$(APIPath)\UnityEngine.TextRenderingModule.dll</HintPath>
+			<SpecificVersion>false</SpecificVersion>
+		</Reference>
+		<Reference Include="UnityEngine.Physics2DModule">
+			<HintPath>$(APIPath)\UnityEngine.Physics2DModule.dll</HintPath>
+			<SpecificVersion>false</SpecificVersion>
+		</Reference>
+		<Reference Include="PlayMaker">
+			<HintPath>$(APIPath)\PlayMaker.dll</HintPath>
+			<SpecificVersion>false</SpecificVersion>
+		</Reference>
+		<Reference Include="Satchel">
+			<HintPath>$(APIPath)\Satchel.dll</HintPath>
+			<SpecificVersion>false</SpecificVersion>
+		</Reference>
+		<Reference Include="MMHOOK_Assembly-CSharp">
+			<HintPath>$(APIPath)\MMHook_Assembly-Csharp.dll</HintPath>
+			<SpecificVersion>false</SpecificVersion>
+		</Reference>
+		<Reference Include="MMHOOK_PlayMaker">
+			<HintPath>$(APIPath)\MMHook_PlayMaker.dll</HintPath>
+			<SpecificVersion>false</SpecificVersion>
+		</Reference>
+	</ItemGroup>
 </Project>
